package org.switch2022.project.ddd;

public interface ValueObject {
}
