package org.switch2022.project.mapper;

import org.switch2022.project.model.valueobject.SprintID;
import org.switch2022.project.model.valueobject.SprintStatus;

public class UpdateSprintDomainDTO {

    public SprintID sprintID;
    public SprintStatus sprintStatus;

}
