package org.switch2022.project.model.valueobject;

import org.switch2022.project.ddd.ValueObject;

public enum SprintStatus implements ValueObject {
    Planned,
    Open,
    Closed
}
